# Langchain

./: chat_history.txt  main.py  pyproject.toml  requirements.txt
Langchain codes/: langchain_RAG.ipynb  langchain_agents.ipynb  langchain_chains.ipynb  langchain_components.ipynb  langchain_document_loaders.ipynb  langchain_genai_essential_codes.ipynb  langchain_models.ipynb  langchain_output_parsers.ipynb  langchain_prompts.ipynb  langchain_retrievers.ipynb  langchain_runnables.ipynb  langchain_structured.ipynb  langchain_text_splitters.ipynb  langchain_tools.ipynb  langchain_vectorstores.ipynb
chatmodels/: chatbot.py  chatmodel.ipynb  chatmodel.py  message_placeholder.py  messages.py
embedding models/: embedding_model.py
output_parsers/: string_output_parsers.py
structured_output/: structured_output.ipynb
