[project]
name = "genai-project-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain[huggingface]>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "transformers>=5.3.0",
    "torch>=2.10.0",
    "accelerate>=1.13.0",
]
